--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Helpala</title>
   </head>
   <body>
-    <div id="root">hey</div>
+    <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
